# AxonAI

./: .env.example  .gitignore  .replit  DATABASE_SCHEMA.md  DEMO_README.md  README.md  README_TUTOR.md  WINDOWS_SETUP.md  ablation_log.txt  admin_ai_dashboard.py  ai_config.py  ai_coordinator.py  ai_service.py  api_routes.py  app.py  auth.py  axonai_api.py  bulk_interaction_generator.py  data_generator.py  database_setup.py  gpt_student_simulator.py  init_db.py  lambda_function.py  lambda_new_routes.py  main.py  main_tutor_agent.py  migrate_add_mastery_fields.py  misconception_adapter.py  models.py  package-lock.json  package.json  populate_student_data.py  progression_analyzer.py  pyproject.toml  rate_limiter.py  replit.md  requirements-windows.txt  requirements.txt  routes.py  scheduler_config.py  (+8 more)
Axon AI 2/: Axon AI App.html  index.html
agents/: admin_ai_dashboard.py  main_tutor_agent.py  mastery_tracking_agent.py  progression_analyzer.py  quiz_builder_agent.py  student_ai_analyzer.py
api/: [...path].js
attached_assets/: Pasted-Goal-Replace-these-non-AI-parts-with-ML-A-Mastery-Track_1766055293913.txt  Pasted-We-have-AxonAI-Flask-SQLAlchemy-with-these-features-alr_1765881851652.txt  Pasted-You-are-a-senior-ML-systems-architect-auditing-an-EdTec_1766053789452.txt  Pasted-You-are-inside-a-Flask-codebase-for-AxonAI-I-need-you-t_1765852776650.txt  Pasted-You-are-my-senior-ML-backend-architect-I-m-building-Axo_1766096985088.txt  Pasted-You-are-refactoring-my-AxonAI-Flask-app-The-app-current_1766099680400.txt  Pasted-You-are-working-on-a-Flask-app-called-AxonAI-Implement-_1765880737568.txt  Pasted-Your-School-AI-system-is-designed-as-a-complete-learning-and-teaching-ecosystem-that-blends-personal-1758624441540_1758624441541.txt
bandit/: policy.py
core/: ai_coordinator.py  ai_service.py  scheduler_config.py
docs/: ADAPTIVE_ML_ARCHITECTURE.md  SIMULATOR_GUIDE.md  simulator_v1_plan.md
frontend/: .env.example  .eslintrc.js  .gitignore  package-lock.json  package.json  playwright.config.cjs
instance/: school_management.db
mastery_model/: __init__.py  feature_builder.py  inference.py
ml/: README.md  __init__.py  config.py  db.py  excluded_students.py  lambda_handler.py  pipeline.py  requirements.txt
retrieval/: __init__.py  retriever.py
risk_model/: model.py
routes/: api_routes.py  lambda_new_routes.py  routes.py
schema/: rds_postgres_schema.sql
scripts/: extract_rds_schema.py  migrate_to_supabase.py  regenerate_demo_insights.py  render_database_schema_md.py  setup-local-frontend.ps1  simulate_school.py  smoke_demo.py  smoke_ml_api.py
services/: misconception_adapter.py  ml_api_client.py  ml_integration.py  model_interfaces.py  tutor_service.py
simulator/: __init__.py  cohort_builder.py  interaction_simulator.py  student_generator.py
src/: App.css  App.js  index.css  index.js
static/: style.css
templates/: admin_dashboard.html  admin_ml_training.html  ai_dashboard.html  ai_tutor.html  ai_verification.html  assignment_detail.html  base.html  create_assignment.html  edit_class.html  edit_user.html  grade_submission.html  home.html  landing.html  login.html  manage_classes.html  manage_users.html  parent_child.html  (+26 more)
(+285 files in other folders)
