[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.93.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.9.0",
    "werkzeug>=3.1.3",
]

[project.optional-dependencies]
# Simulator v1 — install with: uv sync --extra simulator (or pip install -e '.[simulator]')
simulator = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "networkx>=3.2",
    "py-irt>=0.5",
    # Phase 2: loaders accept s3:// URIs (see docs/simulator/phase_2_plan.md §2).
    "boto3>=1.34",
    # Phase 2 B7-B9: LLM tutor, rewriter, verifier.
    "anthropic>=0.39",
]
# Dev extras for simulator work (tests, validation plots).
simulator-dev = [
    "matplotlib>=3.8",
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]
# ASSISTments ↔ Eedi semantic candidate matching (sentence-transformers).
# Install: uv sync --extra semantic-match
semantic-match = [
    "numpy>=1.26",
    "pandas>=2.2",
    "boto3>=1.34",
    "sentence-transformers>=3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ml*", "core*", "config*", "models*", "routes*", "utils*"]
exclude = ["tests*", "docs*", "frontend*", "scripts*", "templates*", "data*", "schema*", "validation*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.uv]
link-mode = "copy"
